# API-medication-management

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  UV.md  docker-compose.bot.yml  docker-compose.infra.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml
api_backend/: main.py  routers.py
api_backend/drug_regimen/: dependencies.py  manager_routers.py  models.py  regimen_routers.py  repository.py  schemas.py  service.py
api_backend/settings/: configuration.py  database.py  fabric_dependency.py  logging_config.py  schemas.py
api_backend/user/: dependencies.py  models.py  repository.py  routers.py  schemas.py  service.py
event_microservice/: .env.example  Dockerfile  pyproject.toml
event_microservice/src/: main.py  routers.py
event_microservice/src/event/: repository.py  routers.py  schemas.py  service.py  setup.py
event_microservice/src/settings/: configuration.py  database.py  repository.py
event_microservice/src/utils/: time_conversion.py
event_worker/: .env.example  Dockerfile  pyproject.toml
event_worker/src/event/: dependencies.py  repository.py  routers.py  setup.py
event_worker/src/settings/: configuration.py  database.py  repository.py
migrations/: env.py
migrations/versions/: 35409d607561_edit_fields_for_manager.py  458b58035402_qwer.py  c72d054ad8b5_init.py
scripts/: add_domain.py
src/: main.py  routers.py
src/drug_regimen/: dependencies.py  manager_routers.py  models.py  regimen_routers.py  repository.py  schemas.py  service.py
src/event/: dependencies.py  models.py  repository.py  routers.py  schemas.py  service.py  setup.py
src/settings/: configuration.py  database.py  fabric_dependency.py
src/tasks/: dependencies.py  models.py  repository.py  routers.py  schemas.py  service.py
src/user/: dependencies.py  models.py  repository.py  routers.py  schemas.py  service.py
src/utils/: time_conversion.py
tg_bot/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  routers.py
tg_bot/core/: config.py
tg_bot/drug_regimen/: dependencies.py  handlers.py  service.py
tg_bot/drug_regimen_manager/: dependencies.py  handlers.py  requests.py  service.py
tg_bot/event/: service.py  setup.py
tg_bot/service_handlers/: __init__.py  handlers.py
tg_bot/user/: dependencies.py  requests.py  service.py
tg_bot/utils/: buttons.py
web_ui/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web_ui/src/: App.tsx  api.ts  index.css  telegram.d.ts  types.ts
(+7 files in other folders)
