[project]
name = "tg-bot"
version = "0.1.0"
description = "Telegram bot for medication management"
requires-python = ">=3.12"
dependencies = [
    "aiogram[redis]>=3.7.0",
    "aio-pika>=9.4.3",
    "pika>=1.3.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
# package = false — виртуальный проект, uv не пытается собрать/установить сам пакет
package = false

[tool.ruff]
line-length = 120
target-version = "py312"
